--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Makala game - menu</title>
+<title>Mmoscardini Makala game - menu</title>
 </head>
 <body>
 
 <h1> Welcome to mmoscardini's Mankala game</h1>
 
-<a th:href="@{/game}">Start game</p>
+<a th:href="@{/game/myGame/}">Start game</p>
 
 </body>
 </html>
