fix end game condition identifier

--- a/src/main/resources/templates/end.html
+++ b/src/main/resources/templates/end.html
@@ -1,6 +1,7 @@
 <html>
 <head><title>Mmoscardini Mancala Game - end game</title></head>
 <body>
+<h1>END GAME</h1>
 <!--<h1><span th:text="${winner.name}"/> has won!!</h1>-->
 
 <!--<h2>Player One has <span th:text="${player1.stones}"/> stones</h2>-->
