--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,7 +7,7 @@
 
 <h1> Welcome to mmoscardini's Mankala game</h1>
 
-<a th:href="@{/game/myGame/}">Start game</p>
+<a th:href="@{/game/myGame/}">Start game</a>
 
 </body>
 </html>
